# agent-demos

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  README.zh-CN.md  agent-e2e-local-qa-2026-06-02.md  agent-e2e-qa-2026-06-02.md  biome.jsonc  package.json  pnpm-lock.yaml  registry.json  skills-lock.json  turbo.json  vercel.json
apps/langgraph-agent-api/: .env.example  .vercelignore  README.md  app.py  langgraph.json  pyproject.toml  vercel.json
apps/langgraph-agent-api/langgraph_agent/: agent.py  vercel_app.py
apps/langgraph-agent-api/scripts/: preprod-vercel-build.sh
apps/langgraph-agent-api/tests/: test_agent.py  test_vercel_deployment_contract.py  test_vercel_fastapi_contract.py
apps/web/: .env.example  components.json  env.ts  next-production-assets-contract.test.ts  next.config.mjs  package.json  turbo-env-contract.test.ts  turbo.json  vitest.base.config.ts  vitest.config.ts  vitest.integration.config.ts
docs/: DOCS.md  index.md
docs/frontend/: DOCS.md  agent-demo-structure.md  ai-sdk-recipes-checklist.md  customer-memory-agent.md  generative-ui.md  homepage-gallery.md  index.md  langgraph-agent.md  loop-agent.md  mcp-agent.md  multimodal-chatbot.md  openai-agents-sdk-demo.md  persistent-agent.md  project-guide-companion.md  rag-chatbot.md  registry-sync.md  sandbox-agent.md  shadcn-registry-distribution.md  site-usage-gate.md  skills-agent.md  system-status-pages.md  trace-eval-agent.md  ultra-chatbot-agent-qa-fix-checklist.md  ultra-chatbot-agent-source-checklist.md  ultra-chatbot-agent.md  (+1 more)
registry/: registry-demos.json
(+1197 files in other folders)
