[project]
name = "langgraph-agent-api"
version = "0.1.0"
description = "Python LangGraph Agent Server demo for the Next.js AI Elements frontend"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "langgraph-cli[inmem]>=0.4.26",
    "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
